; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/kernel/extr_sched.c_finish_lock_switch.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/kernel/extr_sched.c_finish_lock_switch.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.rq = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32, i32 }
%struct.task_struct = type { i32 }

@_THIS_IP_ = common dso_local global i32 0, align 4
@current = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.rq*, %struct.task_struct*)* @finish_lock_switch to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @finish_lock_switch(%struct.rq* %0, %struct.task_struct* %1) #0 {
  %3 = alloca %struct.rq*, align 8
  %4 = alloca %struct.task_struct*, align 8
  store %struct.rq* %0, %struct.rq** %3, align 8
  store %struct.task_struct* %1, %struct.task_struct** %4, align 8
  %5 = load %struct.rq*, %struct.rq** %3, align 8
  %6 = getelementptr inbounds %struct.rq, %struct.rq* %5, i32 0, i32 0
  %7 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %6, i32 0, i32 0
  %8 = load i32, i32* @_THIS_IP_, align 4
  %9 = call i32 @spin_acquire(i32* %7, i32 0, i32 0, i32 %8)
  %10 = load %struct.rq*, %struct.rq** %3, align 8
  %11 = getelementptr inbounds %struct.rq, %struct.rq* %10, i32 0, i32 0
  %12 = call i32 @spin_unlock_irq(%struct.TYPE_2__* %11)
  ret void
}

declare dso_local i32 @spin_acquire(i32*, i32, i32, i32) #1

declare dso_local i32 @spin_unlock_irq(%struct.TYPE_2__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
